Plugin Name: Membership 2
Author: Philipp Stracker, Fabio Jun, Rheinard Khorf

Change Log:
----------------------------------------------------------------------

1.0.2.6
----------------------------------------------------------------------
- Added: Addon - WP reCaptcha integration
- Fixed: BuddyPress Members directory could not be protected
- Fixed: Warning on edit membership screen when % sign is in the membership name
- Fixed: Visitors coming from Google search links get blank page, Error 500
- Fixed: Media Protection Add On
- Fixed: Media Protection changing URL of non protected media items
- Fixed: Media add-on changes attachment URLs but does not revert when disabled
- Fixed: Membership pages links were broken when subsite is selected as host the M2 pages
- Fixed: White screen in WP-Touch settings page
- Fixed: XProfile Date field was not being saved in registration form
- Fixed: Category protected posts was being appeared in home and search page
- Fixed: Confirmation emails not sent when registering new user from admin end
- Fixed: Upgrade path is ignored when a member is logged in but has no subscription
- Fixed: UI Issue - Menu addon dropdown text was not readable
- Fixed: Subsite users subscription details can't be edited

1.0.2.5
----------------------------------------------------------------------
- Added: Constant M2_FORCE_NO_SSL to avoid forcing SSL in Stripe Live Mode
- Fixed: Manual Payment Gateway always in Sandbox Mode
- Fixed: Free Payment Gateway always in Sandbox Mode
- Fixed: Membership Payment amount could not be saved in Firefox
- Fixed: BuddyPress Integration - No xProfile field validation
- Fixed: BuddyPress Integration - No validation error message shown
- Fixed: Select drop down in Authorize.net checkout was broken
- Fixed: JS conflict with Visual Composer
- Fixed: JS conflict with Be Theme
- Fixed: JS conflict with LayerSlider
- Fixed: Pagination was not working for Classifieds plugin
- Fixed: Search was not working on front-end